--- a/Datehelper/Tools.Tests/packages.config
+++ b/Datehelper/Tools.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="2.1.0" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.1.0" targetFramework="net48" />
+  <package id="Pose" version="1.2.1" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net48" />
 </packages>
